@@ -6,6 +6,9 @@ Look-and-feel changes using more modern HTML5 and CSS standards
 Fixed bug causing phpVirtualBox to not load in IE unless the
 JavaScript console was open
 
+Added config option to exclusively use phpVirtualBox groups rather
+than VirtualBox groups - see config.php-example for more info
+
 -------------------------------------
 	4.2-1	2012-10-09
 -------------------------------------
